# YOLOv5Detection_LibTorch

./: CMakeLists.txt  README.md
src/: YOLOv5Detection_LibTorch.cpp
